Corrected acording to notices

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.0/slimselect.min.css"
     />
-    <link rel="stylesheet" href="https://cssloaders.github.io/cssloaders.css" />
+    <!-- <link rel="stylesheet" href="https://cssloaders.github.io/cssloaders.css" /> -->
+    <style>
+      .breed-select,
+      .cat-info,
+      .error {
+        display: none;
+      }
+      .loader {
+        display: block;
+      }
+    </style>
   </head>
   <body>
     <select class="breed-select"></select>
